--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: python
 python:
   - "3.6"
-# command to install dependencies
-# install: "pip install -r requirements.txt"
-# command to run tests
-script:
-     - "python -m unittest discover tests"
+install:
+    - "python setup.py -q install"
+script: "python -m unittest discover tests"
